# diacritic

./: .gitignore  README.md
accent/: README.md  setup.cfg
accent/model/: metadata.py  scrape_config.py
circumflex/: LICENSE  README.md  requirements.txt  setup.cfg
circumflex/data_layer/: data_layer.py  local_file_system_data_layer.py
readme_docs/: Untitled-2022-02-14-2056.excalidraw  diacritic_layout.excalidraw  umlaut_layout.excalidraw
scraper/: scraper.py
scraper/data_layer/: data_layer.py  local_file_system_data_layer.py
umlaut/: README.md  requirements.txt
umlaut/scraper/: scrape_runner.py
umlaut/scraper/data_layer/: data_layer.py
umlaut/scraper/scrape_config/: scrape_config.py
umlaut/src/: on_device_scrape_runner.py  scrape_runner.py
umlaut/src/data_layer/: data_layer.py  local_file_system_data_layer.py  metadata.py
umlaut/src/id_service/: data_layer_id_service.py  id_service.py
umlaut/src/scrape_config/: scrape_config.py
umlaut/src/scraper/: scraper.py  squid_scraper.py
