[metadata]
name = accent-kulspel
version = 0.0.4
author = Björn Pedersen
author_email = kulspelqt@gmail.com
description = A package containing necessary model definitions for the Diacritic project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kulspel/diacritic
project_urls =
    Bug Tracker = https://github.com/kulspel/diacritic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .